# auro

./: CMakeLists.txt  package.xml
data/: file.pcd  usb_cam.yaml
launch/: camera.launch
src/: cam_pub.py  pc_to_rgbpc.cpp  sav_img_pcd.cpp  solve_pnp.cpp
